--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <a href="#" class="nav__logo">Nemish</a>
                 </div>
 
+                <!-- <div class="nav__toggle" id="nav-toggle">
+                    <i class='bx bx-menu'></i>
+                </div> -->
+
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
